--- a/style.css
+++ b/style.css
@@ -75,20 +75,6 @@
     font-size: 20px;
 }
 
-/* Social Media */
-#social_media {
-    display: flex;
-    justify-content: space-around;
-}
-
-#social_media img {
-    width: 35px;
-}
-
-#social_media img:hover {
-    transform: scale(1.2);
-}
-
 /* Inputs */
 #inputs {
     display: flex;
@@ -143,7 +129,7 @@
 
 /* Login Button */
 #login_button {
-    border: none;
+    border: 1px solid transparent;
     background: var(--color-gradient);
     padding: 7px;
     border-radius: 3px;
@@ -151,10 +137,14 @@
     font-weight: bold;
     font-size: 18px;
     cursor: pointer;
+    transition: all 0.90s ease;
 }
 
 #login_button:hover {
-    transform: scale(1.05);
+    border: 1px solid var(--color-blue-50);
+    color: var(--color-blue-50);
+    background: none;
+    transition: all 0.90s ease;
 }
 
 /* Dark Mode */
